# dccsrv

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: pipeline.yml
dccsrv/: config.py  dependencies.py  main.py
dccsrv/routers/: main.py
dccsrv/routers/v0/: characters.py
tests/: test_main.py  test_v0_characters.py
tools/: precommit.sh  rundev.sh  setup.sh  test.sh
