[tool.poetry]
name = "dccsrv"
version = "0.1.0"
description = "DCC Server"
authors = ["Stefan Götz <github.nooneelse@spamgourmet.com>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.6.2"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
black = "^21.7b0"
pylint = "^2.9.6"
mypy = "^0.910"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
